resolved code validation errors (as best i can) - spelling mistakes - main page spacing

--- a/sass-proj/sass/_title-ending.scss
+++ b/sass-proj/sass/_title-ending.scss
@@ -9,7 +9,7 @@
   display: flex;
 }
 
-#sass-logo {
+.sass-logo {
   @include sass-logo-width; 
 }
 
